added direct messages, private channels, and starred channels

--- a/coursemash-test/src/components/App.css
+++ b/coursemash-test/src/components/App.css
@@ -12,6 +12,11 @@ body,
     font-size: 1.3em;
 }
 
+/* Sidepanel.js */
+.menu {
+    padding-bottom: 2em;
+}
+
 /* Messages.js */
 .messages {
     height: 440px;
