added code to upload pdf document

--- a/coursemash-test/src/components/App.css
+++ b/coursemash-test/src/components/App.css
@@ -18,8 +18,8 @@ body,
 }
 
 /* Messages.js */
-.messages {
-    height: 440px;
+#message-container {
+    height: 400px;
     overflow-y: scroll;
 }
 
