--- a/coursemash-test/src/components/App.css
+++ b/coursemash-test/src/components/App.css
@@ -49,11 +49,11 @@ body,
 
 /* ColorPanel.js */
 .color__container {
+    cursor: pointer;
     position: relative;
     overflow: hidden;
     width: 35px;
     border-radius: 3px;
-    
 }
 
 .color__square {
@@ -65,4 +65,67 @@ body,
     width: 85px;
     height: 35px;
     transform: rotate(225deg);
+}
+
+#sidebar_color {
+    background : #f4d835
+}
+
+.hidden {
+    display: none;
+}
+
+/* Typing Js */
+
+.user__typing {
+    font-style: italic;
+    font-weight: bold;
+    margin-right: 3px;
+}
+
+.typing {
+    width: 5em;
+    height: 2em;
+    position: relative;
+    padding: 10px;
+    margin-left: 5px;
+    background: #ef6efe;
+    border-radius: 20px;
+}
+
+.typing__dot {
+    float: left;
+    width: 8px;
+    height: 8px;
+    margin: 0 4px;
+    background: #8d8c91;
+    border-radius: 50%;
+    opacity: 0;
+    animation: loadingFade 1s infinite;
+}
+
+.typing__dot:nth-child(1) {
+    animation-delay: 0s;
+}
+
+.typing__dot:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.typing__dot:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+@keyframes loadingFade {
+    0% {
+        opacity: 0;
+    }
+
+    50% {
+        opacity: .8;
+    }
+
+    100% {
+        opacity: 0;
+    }
 }
